--- a/MonsterColoring/Base.lproj/Main.storyboard
+++ b/MonsterColoring/Base.lproj/Main.storyboard
@@ -33,9 +33,6 @@
                                     <constraint firstAttribute="bottom" secondItem="h9m-jn-pPq" secondAttribute="bottom" id="k6v-G2-UcB"/>
                                     <constraint firstItem="h9m-jn-pPq" firstAttribute="centerX" secondItem="h48-Mx-wqo" secondAttribute="centerX" id="mWL-Kp-YPe"/>
                                 </constraints>
-                                <connections>
-                                    <outlet property="delegate" destination="9pv-A4-QxB" id="3UT-Su-s3b"/>
-                                </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -49,6 +46,7 @@
                     <tabBarItem key="tabBarItem" title="Coloring Image" image="image" id="acW-dT-cKf"/>
                     <connections>
                         <outlet property="paintView" destination="h9m-jn-pPq" id="hPY-XP-yVI"/>
+                        <outlet property="scrollView" destination="h48-Mx-wqo" id="o1J-ft-NgI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
