Fixed image scaling!

--- a/MonsterColoring/Base.lproj/Main.storyboard
+++ b/MonsterColoring/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" minimumZoomScale="0.10000000000000001" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="h48-Mx-wqo">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
-                                    <imageView contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h9m-jn-pPq" userLabel="ImageView" customClass="PaintView" customModule="MonsterColoring" customModuleProvider="target">
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h9m-jn-pPq" userLabel="ImageView" customClass="PaintView" customModule="MonsterColoring" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                     </imageView>
                                 </subviews>
@@ -33,6 +33,9 @@
                                     <constraint firstAttribute="bottom" secondItem="h9m-jn-pPq" secondAttribute="bottom" id="k6v-G2-UcB"/>
                                     <constraint firstItem="h9m-jn-pPq" firstAttribute="centerX" secondItem="h48-Mx-wqo" secondAttribute="centerX" id="mWL-Kp-YPe"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="JW0-p5-RXO"/>
+                                </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -46,7 +49,7 @@
                     <tabBarItem key="tabBarItem" title="Coloring Image" image="image" id="acW-dT-cKf"/>
                     <connections>
                         <outlet property="paintView" destination="h9m-jn-pPq" id="hPY-XP-yVI"/>
-                        <outlet property="scrollView" destination="h48-Mx-wqo" id="o1J-ft-NgI"/>
+                        <outlet property="scrollView" destination="h48-Mx-wqo" id="Aph-QB-BwY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
