--- a/MonsterColoring/Base.lproj/Main.storyboard
+++ b/MonsterColoring/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--Coloring Image-->
+        <!--Image For Coloring-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="PaintViewController" customModule="MonsterColoring" customModuleProvider="target" sceneMemberID="viewController">
@@ -46,7 +46,7 @@
                             <constraint firstAttribute="bottom" secondItem="h48-Mx-wqo" secondAttribute="bottom" id="uvM-j5-hc4"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Coloring Image" image="image" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Image For Coloring" image="image" id="acW-dT-cKf"/>
                     <connections>
                         <outlet property="paintView" destination="h9m-jn-pPq" id="hPY-XP-yVI"/>
                         <outlet property="scrollView" destination="h48-Mx-wqo" id="Aph-QB-BwY"/>
