--- a/FlickrPaint/Base.lproj/Main.storyboard
+++ b/FlickrPaint/Base.lproj/Main.storyboard
@@ -223,6 +223,45 @@
             </objects>
             <point key="canvasLocation" x="750" y="360"/>
         </scene>
+        <!--Options-->
+        <scene sceneID="qh3-YS-Ept">
+            <objects>
+                <viewController id="LFJ-hN-cWj" customClass="OptionsViewController" customModule="FlickrPaint" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2ga-Bi-X5m"/>
+                        <viewControllerLayoutGuide type="bottom" id="PyS-Z0-VnJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vZ2-iN-12H">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I7q-Uk-GbQ">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HS1-ai-433">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="531"/>
+                                        <state key="normal" title="Share Image"/>
+                                        <connections>
+                                            <action selector="shareButtonPressed:" destination="LFJ-hN-cWj" eventType="touchUpInside" id="2hC-aT-BiT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="I7q-Uk-GbQ" firstAttribute="leading" secondItem="vZ2-iN-12H" secondAttribute="leading" id="5oK-8A-gD6"/>
+                            <constraint firstItem="PyS-Z0-VnJ" firstAttribute="top" secondItem="I7q-Uk-GbQ" secondAttribute="bottom" id="UOr-VJ-5Kx"/>
+                            <constraint firstAttribute="trailing" secondItem="I7q-Uk-GbQ" secondAttribute="trailing" id="YlA-eo-V8w"/>
+                            <constraint firstItem="I7q-Uk-GbQ" firstAttribute="top" secondItem="2ga-Bi-X5m" secondAttribute="bottom" id="fWZ-Xs-PmD"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Options" id="KPb-dP-xGJ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="icd-nv-t7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="504" y="1162"/>
+        </scene>
         <!--Painting Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
@@ -237,6 +276,7 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="Cck-Fr-NO8"/>
                         <segue destination="TJs-cl-nx4" kind="relationship" relationship="viewControllers" id="76e-8J-hov"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="zVw-uJ-jEk"/>
+                        <segue destination="LFJ-hN-cWj" kind="relationship" relationship="viewControllers" id="6hQ-Bb-Jmf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
